[workspace]
members = ["contracts/*", "packages/*", "wasm/*"]
resolver = "2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true