[package]
name = "cosmwasm-mixer"
version = "0.1.1"
authors = ["guorong <dudurong009@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "0.13.2"
cosmwasm-storage = { version = "0.13.2" }
cw2 = "0.5.0"
cw20 = "0.5.0"
schemars = "0.7"
serde = { version = "=1.0.127", default-features = false, features = ["derive"] }
protocol-cosmwasm = { path = "../../packages/protocol_cosmwasm", default-features = false}
plonk-circuits = { path = "../../packages/plonk-circuits", default-features = false }
plonk-gadgets = { path = "../../packages/plonk-gadgets",  default-features = false }

# curve
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }

[dev-dependencies]
cosmwasm-schema = "0.13.2"
arkworks-setups = { path = "../../packages/arkworks-setups",  default-features = false }
arkworks-native-gadgets = { path = "../../packages/arkworks-native-gadgets", default-features = false }
plonk-core = { path = "../../packages/plonk-core", default-features = false }
hex = "0.4"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
wasm-utils = { version = "=0.1.3" }