[package]
name = "cosmwasm-mixer"
version = "0.1.0"
authors = ["guorong <dudurong009@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm", branch = "multiwasm-1.1.2-zk", default-features = false }
cosmwasm-storage = { git = "https://github.com/oraichain/cosmwasm", branch = "multiwasm-1.1.2-zk", default-features = false }

schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
codec = {package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"]}
protocol-cosmwasm = { version = "0.1.0", path = "../../packages/protocol_cosmwasm"}

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/oraichain/cosmwasm", branch = "multiwasm-1.1.2-zk", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
arkworks-setups = { version = "1.0.0", features = ["r1cs"], default-features = false }
arkworks-native-gadgets = { version = "1.0.0", default-features = false }
hex = "0.4"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
wasm-utils = { version = "=0.1.3" }