[package]
name = "cosmwasm-mixer"
version = "0.1.0"
authors = ["guorong <dudurong009@gmail.com>", "tupt <tu@orai.io>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm", rev = "ed25be5d", default-features = false }
cosmwasm-storage = { git = "https://github.com/oraichain/cosmwasm", rev = "ed25be5d", default-features = false }
cosmwasm-schema = { git = "https://github.com/oraichain/cosmwasm", rev = "ed25be5d", default-features = false }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-vm = { git = "https://github.com/oraichain/cosmwasm", rev = "ed25be5d", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
arkworks-setups = { version = "=1.0.0", features = ["r1cs"], default-features = false }
hex = "0.4"