[package]
name = "cosmwasm-mixer-js"
version = "0.0.1"
authors = ["Thanh tu <tu@orai.io>", "Duc Pham <duc@orai.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-ed-on-bn254 = { version = "^0.3.0", default-features = false }
wasm-bindgen = "0.2.78"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-utils = { version = "=0.1.3" }
js-sys = "0.3.55"
codec = {package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive", "max-encoded-len"]}
plonk-core = { path = "../../packages/plonk-core", features = ["trace"], default-features = false }
arkworks-plonk-circuits = { path = "../../packages/arkworks-plonk-circuits" }
arkworks-plonk-gadgets = { path = "../../packages/arkworks-plonk-gadgets",  default-features = false }
arkworks-native-gadgets = { version = "1.0.0", default-features = false }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
arkworks-setups = { version = "1.0.0", default-features = false }




