[package]
name = "cosmwasm-mixer-js"
version = "0.0.1"
authors = ["Thanh tu <tu@orai.io>", "Duc Pham <duc@orai.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.3", features = ["getrandom"] }
js-sys = "0.3.55"
ark-bn254 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
arkworks-setups = { version = "=1.0.0", features = ["r1cs"], default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.28"
hex = "0.4"





